--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
+    "knex": "^0.14.6",
+    "morgan": "~1.9.0",
+    "pg": "^7.4.3"
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
